test/types/string/bradc/string2complex/badStringToComplex9.good
badStringToComplex9.chpl:3: error: Illegal character when converting from string to complex(64): 'i'
