test/types/string/bradc/string2complex/badStringToComplex9.chpl
var s = "1.2 i";

var c = s:complex(64);

writeln("c is: ", c);
